<resources>
    <string name="app_name">Rentaliin</string>
    <string name="login_title">Member Login</string>>
    <string name="Dont_have_account">Don\'t have account?</string>
    <string name="create_account">Create an account here.</string>
    <string name="username">username / email</string>
    <string name="password">password</string>
    <string name="remember"><u>Remember me</u></string>
    <string name="forgot">Forgot Password</string>
    <string name="landingpage_cap">Your favorite traveling partner</string>
    <string name="signup_title">SignUp Account</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login_here">LogIn Here.</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="email_address">Email Address*</string>
    <string name="number_phone">Phone Number*</string>
    <string name="set_password">Set a Password*</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="profile_kendaraan">Profile Kendaraan</string>
    <string name="title_namamobil">Nama Mobil : </string>
    <string name="nama_mobil">Toyota Kijang Inova Reborn Putih</string>
    <string name="title_tahun">Tahun : </string>
    <string name="tahun">2016</string>
    <string name="title_pajak">Pajak : </string>
    <string name="pajak">Aktif Hingga 29 Oktober 2024</string>
    <string name="title_sistemtransmisi">Sistem Transmisi : </string>
    <string name="sistem_transmisi">Matic</string>
    <string name="title_keterangan">Keterangan : </string>
    <string name="keterangan">Sebuah mobil SUV 7 Seater dengan kondisi yang baik dan memadai untuk perjalanan jauh.</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="title_nama_pemesan">Nama Pemesan</string>
    <string name="nama_pemesan">Shania G, S.Psi.,M.Psi </string>
    <string name="title_waktu">Waktu</string>
    <string name="waktu">19.00 - 20.00 WIB</string>
    <string name="title_tagihan">Tagihan Sebesar</string>
    <string name="tagihan">Rp. 75.000,00</string>
    <string name="sekalian_supir"><u>Sekalian sama supir yang\nakan nemenin kamu yuk</u></string>
    <string name="confirm">Confirm</string>
    <string name="search">Search</string>
    <string name="lihat_peta">Lihat di\npeta</string>
    <string name="recomendation">Recomendation :</string>
    <string name="namarental">Nama Rental</string>
    <string name="alamatrental">Alamat Rental</string>
    <string name="profile_pengguna">Profile</string>
    <string name="title_namapengguna">Nama Lengkap</string>
    <string name="nama_pengguna">Shania G, S.Psi.,M.Psi</string>
    <string name="title_alamatpengguna">Alamat</string>
    <string name="alamat_pengguna">Rumah Sakit Cinta Ibu, Jl. Kapten Pattimura no 78, Tegal</string>
    <string name="title_notelepon_pengguna">No Telepon</string>
    <string name="notelepon_pengguna">082370708949</string>
    <string name="title_nik_pengguna">NIK</string>
    <string name="nik_pengguna">1371011709860005</string>
    <string name="confirm_pengguna">Confirm</string>
    <string name="nama_kendaraan">Nama Kendaraan</string>
    <string name="lihat_info">Lihat info selengkapnya</string>
    <string name="nama_rental_kendaraan">Nama Rental Kendaraan</string>
    <string name="nama_kendaraan_rental">Nama Kendaraan Rental</string>
    <string name="tanggal_perentalan">Tanggal Perentalan</string>
    <string name="history">History Rental</string>
    <string name="payment">Payment</string>
    <string name="payment_desc">You can pay using the method below!</string>
    <string name="title_card_number">Card number</string>
    <string name="card_number">1234 1234 1234 1234</string>
    <string name="title_expiry">Expiry</string>
    <string name="expiry">11 / 24</string>
    <string name="title_cvc">CVC</string>
    <string name="cvc">567</string>
    <string name="title_country">Country</string>
    <string name="country">United States</string>
    <string name="title_postal_code">Postal Code</string>
    <string name="postal_code">90210</string>
</resources>