<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPesanan">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/bacground_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/detail_pesanan"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/title_nama_pemesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/title_nama_pemesan"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RelativeLayout
        android:id="@+id/layout_namapemesan"
        android:layout_width="355dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/title_nama_pemesan"
        app:layout_constraintTop_toBottomOf="@+id/title_nama_pemesan">

        <TextView
            android:id="@+id/nama_pemesan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="5dp"
            android:text="@string/nama_pemesan"
            android:textSize="13sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/title_waktu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_waktu"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/layout_namapemesan"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/title_nama_pemesan"
        app:layout_constraintTop_toBottomOf="@+id/layout_namapemesan" />

    <RelativeLayout
        android:id="@+id/layout_waktu"
        android:layout_width="355dp"
        android:layout_height="44dp"
        android:background="@drawable/bg_textview"
        app:layout_constraintEnd_toEndOf="@+id/layout_namapemesan"
        app:layout_constraintStart_toStartOf="@+id/title_waktu"
        app:layout_constraintTop_toBottomOf="@+id/title_waktu">

        <TextView
            android:id="@+id/waktu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="5dp"
            android:text="@string/waktu"
            android:textSize="13sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/title_tagihan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_tagihan"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/layout_waktu"
        app:layout_constraintTop_toBottomOf="@+id/layout_waktu" />

    <RelativeLayout
        android:id="@+id/layout_tagihan"
        android:layout_width="355dp"
        android:layout_height="44dp"
        android:background="@drawable/bg_textview"
        app:layout_constraintEnd_toEndOf="@+id/layout_waktu"
        app:layout_constraintStart_toStartOf="@+id/title_tagihan"
        app:layout_constraintTop_toBottomOf="@+id/title_tagihan">

        <TextView
            android:id="@+id/tagihan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="5dp"
            android:text="@string/tagihan"
            android:textSize="13sp" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/sekalian_supir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sekalian_supir"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/layout_tagihan"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/layout_tagihan"
        app:layout_constraintTop_toBottomOf="@+id/layout_tagihan" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sekalian_supir"
        app:layout_constraintVertical_bias="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>