<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/signup_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_title"
        app:layout_constraintTop_toBottomOf="@+id/signup_title" />

    <TextView
        android:id="@+id/login_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_here"
        android:textSize="13sp"
        android:textColor="@color/blue1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/have_an_account"
        app:layout_constraintTop_toBottomOf="@+id/signup_title" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bacground_circle"
        android:paddingStart="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/have_an_account">

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="117dp"
            android:layout_height="43dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/first_name"
            android:textColor="@color/grey1"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bacground_circle"
        android:paddingStart="25dp"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout2"
        app:layout_constraintTop_toBottomOf="@+id/login_here">

        <EditText
            android:id="@+id/last_name"
            android:layout_width="117dp"
            android:layout_height="43dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/last_name"
            android:textColor="@color/grey1"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="285dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bacground_circle"
        android:paddingStart="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <EditText
            android:id="@+id/edit_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/email_address"
            android:textColor="@color/grey1"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="285dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bacground_circle"
        android:paddingStart="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/number_phone"
            android:textColor="@color/grey1"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="285dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bacground_circle"
        android:paddingStart="25dp"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout4"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout4"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

        <EditText
            android:id="@+id/edit_set_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/set_password"
            android:textColor="@color/grey1"
            android:textSize="12sp" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/gambar_sigup_content"
        android:layout_width="250dp"
        android:layout_height="170dp"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout5"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout5"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/signup_content" />
    </FrameLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gambar_sigup_content"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/gambar_sigup_content"
        app:layout_constraintTop_toBottomOf="@+id/gambar_sigup_content"
        app:layout_constraintVertical_bias="0.246" />


</androidx.constraintlayout.widget.ConstraintLayout>